Fix compilerArgs syntax in pom.xml
Signed-off-by: Eric Bush <erbush01@gmail.com>