@@ -102,7 +102,7 @@
 					</annotationProcessorPaths>
 					<source>21</source>
 					<target>21</target>
-					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 
